kubernetes/server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: server
  name: server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: server
      version: v1
  template:
    metadata:
      labels:
        app: server
        version: v1
    spec:
      containers:
        - command:
            - ./server
          image: 'danding19931115/movie-micro:latest'
          imagePullPolicy: IfNotPresent
          name: server
          ports:
            - containerPort: 30059
              name: server
          resources: {}
      restartPolicy: Always
